# jas

./: .gitattributes  .gitignore  ARCH.md  ARTICLE.md  AUDIT.md  BLOG.md  BezierShape.swift  CHARACTER.md  CONCEPTS.md  CONTRIBUTING.md  CROSS_LANGUAGE_TESTING.md  DASH_ALIGN.md  DOCUMENT.md  FLASK_INTEGRATION_GAPS.md  FLASK_PARITY.md  INTENT_MAP.md  KEYBOARD_SHORTCUTS.md  LESSONS.md  LICENSE  LIVE_ELEMENTS.md  MANUAL_TESTING.md  MANUAL_TEST_INDEX.md  MENU.md  MODULE.bazel  NATIVE_BOUNDARY.md  OCAML_TOOL_RUNTIME.md  OP_LOG.md  PATH_B_BOXMODEL_REVIEW.md  PATH_B_DESIGN.md  PHASE3.md  PLAN.md  POLICY.md  PYTHON_TOOL_RUNTIME.md  README.md  RECORDED_ELEMENTS.md  RECORDER.md  REFERENCE_GRAPH.md  REPORT.md  REQUIREMENTS.md  REVIEW_PLAN.md  (+30 more)
.claude/: CLAUDE.md  settings.json  (+1 more)
.svn/: wc.db
jas_dioxus/: Cargo.toml  Dioxus.toml
jas_dioxus/assets/: index.html
jas_dioxus/src/: cross_language_test.rs  lib.rs  main.rs
jas_dioxus/src/algorithms/: align.rs  art_along_path.rs  boolean.rs  boolean_normalize.rs  bristle_stroke.rs  calligraphic_outline.rs  dash_renderer.rs  eyedropper.rs  fit_curve.rs  hit_test.rs  hyphenator.rs  knuth_plass.rs  magic_wand.rs  mod.rs  normalize.rs  offset_path.rs  path_text_layout.rs  pattern_along_path.rs  planar.rs  shape_recognize.rs  simplify.rs  text_layout.rs  text_layout_paragraph.rs  transform_apply.rs
jas_dioxus/src/canvas/: arrowheads.rs  mod.rs  render.rs
jas_dioxus/src/document/: artboard.rs  controller.rs  dependency_index.rs  document.rs  document_setup.rs  id_index.rs  mod.rs  model.rs  op_apply.rs  op_log.rs  print_preferences.rs
jas_dioxus/src/geometry/: binary.rs  boolean.rs  element.rs  hit_test.rs  live.rs  measure.rs  mod.rs  normalize.rs  path_ops.rs  path_text_layout.rs  pdf.rs  regular_shapes.rs  svg.rs  test_json.rs  text_layout.rs  tspan.rs
jas_dioxus/src/interpreter/: anchor_buffers.rs  color_util.rs  dialog_view.rs  doc_primitives.rs  effects.rs  expr.rs  expr_eval.rs  expr_lexer.rs  expr_parser.rs  expr_types.rs  length.rs  menu_state.rs  mod.rs  panel_layout.rs  point_buffers.rs  renderer.rs  schema.rs  scope.rs  state_store.rs  tests.rs  timer.rs  widget_tree.rs  workspace.rs
jas_dioxus/src/panels/: align_panel.rs  artboards_panel.rs  boolean_panel.rs  brushes_panel.rs  character_panel.rs  color_panel.rs  layers_panel.rs  magic_wand_panel.rs  mod.rs  opacity_panel.rs  panel_menu.rs  panel_menu_state.rs  panel_menu_view.rs  paragraph_panel.rs  properties_panel.rs  stroke_panel.rs  swatches_panel.rs  symbols_panel.rs
jas_dioxus/src/recorder/: core.rs  fidelity.rs  hooks.rs  mod.rs  replay.rs
jas_dioxus/src/tools/: add_anchor_point.rs  add_anchor_point_tool.rs  anchor_point.rs  anchor_point_tool.rs  delete_anchor_point.rs  delete_anchor_point_tool.rs  direct_selection.rs  direct_selection_tool.rs  group_selection.rs  group_selection_tool.rs  interior_selection_tool.rs  lasso_tool.rs  line.rs  line_tool.rs  mod.rs  partial_selection_tool.rs  path_eraser.rs  path_eraser_tool.rs  pen.rs  pen_tool.rs  pencil.rs  pencil_tool.rs  polygon.rs  polygon_tool.rs  rect.rs  rect_tool.rs  rounded_rect.rs  rounded_rect_tool.rs  selection.rs  selection_tool.rs  smooth.rs  smooth_tool.rs  star_tool.rs  text.rs  text_edit.rs  text_measure.rs  text_path.rs  tool.rs  type_on_path.rs  type_on_path_tool.rs  (+2 more)
jas_dioxus/src/ui/: app.rs  dock.rs  menu.rs  mod.rs
jas_dioxus/src/workspace/: app.rs  app_state.rs  clipboard.rs  color_panel_view.rs  color_picker.rs  color_picker_dialog.rs  dock.rs  dock_panel.rs  fill_stroke_widget.rs  icons.rs  keyboard.rs  layout_apply.rs  menu.rs  menu_bar.rs  mod.rs  pane.rs  resolve_key.rs  save_dialog.rs  session.rs  test_json.rs  theme.rs  toolbar_grid.rs  workspace.rs
jas_dioxus/tests/: cross_language_test.rs
jas_ocaml/test/: BUILD  canvas_test.ml  controller_test.ml  cross_language_test.ml  document_test.ml  dune  element_test.ml  jas_test.ml  measure_test.ml  menu_test.ml  model_test.ml  svg_test.ml
jas_ocaml/test/algorithms/: align_fixture_test.ml  align_test.ml  art_along_path_test.ml  boolean_test.ml  bristle_stroke_test.ml  dash_renderer_test.ml  dune  eyedropper_test.ml  fit_curve_test.ml  hit_test_test.ml  hyphenator_test.ml  knuth_plass_test.ml  magic_wand_test.ml  path_text_layout_test.ml  pattern_along_path_test.ml  planar_test.ml  shape_recognize_test.ml  simplify_test.ml  text_layout_test.ml
jas_ocaml/test/canvas/: canvas_test.ml  dune  element_stroke_counter_scale_test.ml  opacity_mask_test.ml  pane_rendering_test.ml  selection_handle_rects_test.ml  selection_outline_scale_test.ml
jas_ocaml/test/document/: controller_test.ml  document_test.ml  dune  model_test.ml  print_pipeline_test.ml
jas_ocaml/test/geometry/: dune  element_test.ml  live_test.ml  measure_test.ml  normalize_test.ml  path_ops_test.ml  pdf_test.ml  svg_test.ml  tspan_test.ml
jas_ocaml/test/interpreter/: active_document_view_test.ml  align_apply_test.ml  align_panel_state_test.ml  character_panel_state_test.ml  doc_primitives_test.ml  dune  effects_test.ml  expr_eval_test.ml  layers_visibility_test.ml  length_test.ml  paragraph_panel_state_test.ml  schema_test.ml  state_store_test.ml  stroke_panel_state_test.ml  tool_options_dispatch_test.ml
jas_ocaml/test/menu/: dune  fifo_action_routing_test.ml  menu_model_test.ml  menu_test.ml
jas_ocaml/test/panels/: boolean_apply_test.ml  dune  panel_menu_test.ml  production_route_journal_test.ml
jas_ocaml/test/tools/: anchor_point_tool_test.ml  color_picker_test.ml  dune  text_edit_test.ml  tool_interaction_test.ml  toolbar_test.ml  type_tool_test.ml  yaml_selection_tool_test.ml  yaml_tool_anchor_test.ml  yaml_tool_artboard_test.ml  yaml_tool_blob_brush_test.ml  yaml_tool_effects_test.ml  yaml_tool_geometry_test.ml  yaml_tool_hit_test_test.ml  yaml_tool_line_test.ml  yaml_tool_paintbrush_test.ml  yaml_tool_path_edit_test.ml  yaml_tool_pen_test.ml  yaml_tool_pencil_test.ml  yaml_tool_selection_variants_test.ml  yaml_tool_test.ml  yaml_tool_transform_test.ml  yaml_tool_viewport_test.ml
jas_ocaml/test/workspace/: dock_test.ml  dune  pane_test.ml  workspace_layout_test.ml
(+1418 files in other folders)
