module(
    name = "jas",
    version = "0.1.0",
)

bazel_dep(name = "rules_python", version = "1.9.0")
bazel_dep(name = "rules_apple", version = "4.1.0")
bazel_dep(name = "rules_swift", version = "3.1.2")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.11",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip_deps",
    python_version = "3.11",
    requirements_lock = "//:requirements.txt.lock",
)
use_repo(pip, "pip_deps")