[package]
name = "jas_dioxus"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.6", features = ["web"] }
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "MouseEvent",
    "KeyboardEvent",
    "DomRect",
    "Window",
    "Document",
    "Element",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "HtmlAnchorElement",
    "HtmlInputElement",
    "FileReader",
    "FileList",
    "File",
    "Event",
    "InputEvent",
    "Navigator",
    "Clipboard",
    "TextMetrics",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
log = "0.4"
dioxus-logger = "0.6"
