(test
 (name canvas_test)
 (libraries jas lablgtk3))

(test
 (name element_test)
 (libraries jas))

(test
 (name menu_test)
 (libraries jas lablgtk3))

(test
 (name document_test)
 (libraries jas))

(test
 (name measure_test)
 (libraries jas))

(test
 (name model_test)
 (libraries jas))

(test
 (name controller_test)
 (libraries jas))

(test
 (name svg_test)
 (libraries jas str))
