(test
 (name boolean_test)
 (libraries jas alcotest))

(test
 (name fit_curve_test)
 (libraries jas alcotest))

(test
 (name hit_test_test)
 (libraries jas alcotest))

(test
 (name path_text_layout_test)
 (libraries jas alcotest))

(test
 (name planar_test)
 (libraries jas alcotest))

(test
 (name shape_recognize_test)
 (libraries jas alcotest))

(test
 (name text_layout_test)
 (libraries jas alcotest))

(test
 (name hyphenator_test)
 (libraries jas alcotest))

(test
 (name knuth_plass_test)
 (libraries jas alcotest))

(test
 (name align_test)
 (libraries jas alcotest))

(test
 (name align_fixture_test)
 (libraries jas alcotest yojson))
