(test
 (name canvas_test)
 (libraries jas lablgtk3 alcotest))

(test
 (name pane_rendering_test)
 (libraries jas alcotest))

(test
 (name opacity_mask_test)
 (libraries jas alcotest))

(test
 (name selection_handle_rects_test)
 (libraries jas lablgtk3 alcotest))

(test
 (name selection_outline_scale_test)
 (libraries jas lablgtk3 alcotest))

(test
 (name element_stroke_counter_scale_test)
 (libraries jas lablgtk3 alcotest))
