(test
 (name state_store_test)
 (modules state_store_test)
 (libraries jas alcotest))

(test
 (name effects_test)
 (modules effects_test)
 (libraries jas alcotest))

(test
 (name expr_eval_test)
 (modules expr_eval_test)
 (libraries jas alcotest))

(test
 (name schema_test)
 (modules schema_test)
 (libraries jas alcotest))

(test
 (name active_document_view_test)
 (modules active_document_view_test)
 (libraries jas alcotest))
