(test
 (name state_store_test)
 (modules state_store_test)
 (libraries jas alcotest))

(test
 (name length_test)
 (modules length_test)
 (libraries jas alcotest))

(test
 (name effects_test)
 (modules effects_test)
 (libraries jas alcotest))

(test
 (name expr_eval_test)
 (modules expr_eval_test)
 (libraries jas alcotest))

(test
 (name schema_test)
 (modules schema_test)
 (libraries jas alcotest))

(test
 (name active_document_view_test)
 (modules active_document_view_test)
 (libraries jas alcotest))

(test
 (name align_panel_state_test)
 (modules align_panel_state_test)
 (libraries jas alcotest))

(test
 (name align_apply_test)
 (modules align_apply_test)
 (libraries jas alcotest))

(test
 (name doc_primitives_test)
 (modules doc_primitives_test)
 (libraries jas alcotest))
