(test
 (name toolbar_test)
 (modules toolbar_test)
 (libraries jas lablgtk3 alcotest))

(test
 (name tool_interaction_test)
 (modules tool_interaction_test)
 (libraries jas lablgtk3 alcotest))

(test
 (name text_edit_test)
 (modules text_edit_test)
 (libraries jas alcotest))

(test
 (name anchor_point_tool_test)
 (modules anchor_point_tool_test)
 (libraries jas alcotest))

(test
 (name yaml_tool_effects_test)
 (modules yaml_tool_effects_test)
 (libraries jas alcotest))

(test
 (name yaml_tool_test)
 (modules yaml_tool_test)
 (libraries jas lablgtk3 alcotest))

(test
 (name yaml_selection_tool_test)
 (modules yaml_selection_tool_test)
 (libraries jas lablgtk3 alcotest))

; color_picker_test removed — color picker now uses YAML dialog system
